src/style.scss
@import url('https://fonts.googleapis.com/css?family=Muli:400,700');
 /***********************/
 /*    color scheme     */
 /***********************/

 $primary: #3F5EF8;
 $secondary: #f7f7f7;
 $highlight: #3ecf8e;
 $dim: rgba(0,0,0,0.2);
 $text: #6b7c93;


 /***********************/
 /*       global        */
 /***********************/

* {
  box-sizing: border-box;
}
body {
  background: #f7f7f7;
  font-family: "Muli";
  font-size: 1.7em;
}
#alert1 {
  visibility: hidden;
  text-align: center;
  opacity: 0;
}
#alert1.appear {
  position: relative;
  visibility: visible;
  opacity: 1;
  transition: 0.5s ease;
  z-index: 2;
}
.bolder {
  font-weight: bolder;
}
.shadow-effect {
  background: white;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.01), 0 0 0 1px rgba(0,0,0,0.03);
  border-radius: 4px;
}
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: lightgray;
}

/***********************/
/* bootstrap overrides */
/***********************/

.navbar-default {  
  border-color: transparent;
}
.alert {
  padding: 0.9em;
  margin: 0;
}
.btn-success {
  background: #3f4448;
  border-color: transparent;
}

 /***********************/
 /*      desktop        */
 /***********************/

section#navigation {
  box-shadow: 0 4px 20px rgba(50,50,93,.50);
  nav {
    text-align: center;
    padding: 0.5em;
  }
  ul {
    list-style: none;
  }
  #logo {
    width: 215px;
    padding: 0.2em 0em;
  }
}
section#api-info-sidebar {
}
section#contactForm {
  form {
    width: 100%;
    margin: 0 auto;
  }
  .input-group {
    margin: 1em 0em;
    width: 100%
  }
  .input-group-addon {
    width: 150px
  }
  .contact-form-field {
    width: 100%
  }
  .contact-form-button {
    position: relative;
    top: 0;
    left: 50%;
    width: 80%;
    transform: translateX(-50%);
    margin-top: 2em; 
  }
}
.weather-icons {
  width: 100%;
}
.news-image {
  width: 100%;
}

 /***********************/
 /*       mobile        */
 /***********************/

@media (max-width: 991px){
  .weather-icons {
    width: 100px;
  }
  .news-image {
    width: 150px;
  }
  section#navigation #logo {
    width: 215px;
    padding: 1em 0em;
  }
}

